view: fix buggy scrolling on macOS

On macOS the trackpad also emits touch events which are sometimes
picked up by the flick gesture recogniser registered by QScroller;
this results in some odd scrolling behaviour as described in bug
442060. Therefore it's better to not let the QScroller register it
on that platform.

BUG: 442060